<resources>
    <string name="app_name">Kadai05_PI12A_16</string>
    <string name="title">課題05　じゃんけんアプリ</string>
    <string name="author">PI12A294　No.16　朱社佳</string>
    <string name="history">履歴：</string>
    <string name="back">戻る</string>
    <string name="result">結果</string>
    <string name="computer">コンピュータ</string>
    <string name="player">あなた</string>
    <string name="win">勝：0</string>
    <string name="lose">敗：0</string>
    <string name="draw">引き分け：0</string>
    <string name="total">回数：0</string>
    <string name="winPer">勝率：0</string>
    <string name="reset">リセット</string>
</resources>
