<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/textLight"
        android:text="@string/title" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:gravity="end"
        android:textColor="@color/textLight"
        android:text="@string/author" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/computer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="@string/computer"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="@string/player"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/playerHand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/rockcom" />

        <ImageView
            android:id="@+id/comHand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/papercom" />
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="33sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:text="@string/result" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp">

        <TextView
            android:id="@+id/winCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="@string/win" />

        <TextView
            android:id="@+id/loseCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="@string/lose" />

        <TextView
            android:id="@+id/drawCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/text"
            android:text="@string/draw" />
    </LinearLayout>

    <TextView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/text"
        android:text="@string/history" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/text"
            android:text="@string/total" />

        <TextView
            android:id="@+id/winPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/text"
            android:text="@string/winPer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:textColor="@color/buttonText"
            android:textSize="26sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:onClick="onReturnClicked"
            android:text="@string/back" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:textColor="@color/buttonText"
            android:textSize="26sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:onClick="onResetClicked"
            android:text="@string/reset" />
    </LinearLayout>


</LinearLayout>